syntax = "proto3";

option go_package = "./proto/user";

service User {
  // Sends User Login Data and Recive Data
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

// The request message containing the user's name.
message CreateUserRequest {
  string name = 1;
  string password = 2;
}

// The response message containing the UserID
message CreateUserResponse {
  string userID = 1;
}

message GetUserByUsernameRequest {
  string name = 1;
}

message GetUserByUsernameResponse {
  string userID = 1;
  string name = 2;
  string password = 3;
}

message GetUserByUserNameAndPasswordRequest {
  string name = 1;
  string password = 2;
}

// The response message containing the UserID
message GetUserByUserNameAndPasswordResponse {
  string userID = 1;
}